# KasiVest

./: README.md
.github/workflows/: python-app.yml
kasiVest/: index.html
project_administrator_restricted_visibility/: README.rst  __manifest__.py
project_administrator_restricted_visibility/i18n/: project_administrator_restricted_visibility.pot
project_administrator_restricted_visibility/readme/: CONTRIBUTORS.md
project_group/: README.rst  __manifest__.py
project_group/i18n/: project_group.pot
project_group/tests/: __init__.py  test_project_visibility.py
project_group/views/: project_project.xml
project_hr/: README.rst  __manifest__.py
project_hr/i18n/: ca.po  de.po  es.po  it.po  project_hr.pot  sl.po
project_hr/models/: project_task.py  res_users.py
project_hr/readme/: CONTRIBUTORS.md
project_hr/tests/: test_project_hr.py
project_hr/views/: project_task_views.xml
project_key/: README.rst  __manifest__.py
project_key/i18n/: de.po  es_AR.po  fr.po  it.po  project_key.pot
project_key/models/: project_project.py  project_task.py
project_key/tests/: test_common.py  test_controller.py
project_merge/: README.rst  __manifest__.py
project_portal_task_visibility/: README.rst  __manifest__.py  hooks.py
project_role/: README.rst  __manifest__.py
project_stage_extra_info/: README.rst  __manifest__.py
project_stakeholder/: README.rst  __manifest__.py
project_tag_hierarchy/: README.rst  __manifest__.py
project_tag_multicompany/: README.rst  __manifest__.py
project_tag_security/: README.rst  __manifest__.py
project_task_ancestor/: README.rst  __manifest__.py
project_task_code/: README.rst  __manifest__.py
project_task_code_portal/: README.rst  __manifest__.py
project_task_description_portal/: README.rst  __manifest__.py
project_task_description_template/: README.rst  __manifest__.py
project_task_material/: README.rst  __manifest__.py
project_task_note/: README.rst  __manifest__.py
project_task_parent_due_auto/: README.rst  __manifest__.py
project_task_personal_stage_auto_fold/: README.rst  __manifest__.py
project_task_pull_request_state/: README.rst  __manifest__.py
project_task_related/: README.rst  __manifest__.py
project_task_stage_change_restriction/: README.rst  __init__.py  __manifest__.py
project_task_stage_lock/: README.rst  __manifest__.py
project_task_stock/: README.rst  __manifest__.py
project_task_tag/: README.rst  __manifest__.py
project_timesheet_time_control/: README.rst  __manifest__.py
sale_project_copy_tasks/: README.rst  __manifest__.py
sale_project_reimbursement_cost/: README.rst  __manifest__.py
sale_project_task_recurrency/: README.rst  __manifest__.py
sale_project_task_selection/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
styles/: styles.css
(+190 files in other folders)
