[project]
name = "odoo-addons-oca-project"
version = "18.0.20260119.0"
dependencies = [
    "odoo-addon-project_administrator_restricted_visibility==18.0.*",
    "odoo-addon-project_department==18.0.*",
    "odoo-addon-project_group==18.0.*",
    "odoo-addon-project_hr==18.0.*",
    "odoo-addon-project_key==18.0.*",
    "odoo-addon-project_merge==18.0.*",
    "odoo-addon-project_milestone_status==18.0.*",
    "odoo-addon-project_parent==18.0.*",
    "odoo-addon-project_parent_task_filter==18.0.*",
    "odoo-addon-project_pivot==18.0.*",
    "odoo-addon-project_portal_task_visibility==18.0.*",
    "odoo-addon-project_purchase_link==18.0.*",
    "odoo-addon-project_role==18.0.*",
    "odoo-addon-project_sequence==18.0.*",
    "odoo-addon-project_stage_extra_info==18.0.*",
    "odoo-addon-project_stage_last_update_date==18.0.*",
    "odoo-addon-project_stakeholder==18.0.*",
    "odoo-addon-project_tag_hierarchy==18.0.*",
    "odoo-addon-project_tag_multicompany==18.0.*",
    "odoo-addon-project_tag_security==18.0.*",
    "odoo-addon-project_task_add_very_high==18.0.*",
    "odoo-addon-project_task_ancestor==18.0.*",
    "odoo-addon-project_task_code==18.0.*",
    "odoo-addon-project_task_code_portal==18.0.*",
    "odoo-addon-project_task_default_stage==18.0.*",
    "odoo-addon-project_task_description_portal==18.0.*",
    "odoo-addon-project_task_description_template==18.0.*",
    "odoo-addon-project_task_material==18.0.*",
    "odoo-addon-project_task_name_with_id==18.0.*",
    "odoo-addon-project_task_note==18.0.*",
    "odoo-addon-project_task_parent_completion_blocking==18.0.*",
    "odoo-addon-project_task_parent_due_auto==18.0.*",
    "odoo-addon-project_task_personal_stage_auto_fold==18.0.*",
    "odoo-addon-project_task_pull_request==18.0.*",
    "odoo-addon-project_task_pull_request_state==18.0.*",
    "odoo-addon-project_task_stage_lock==18.0.*",
    "odoo-addon-project_task_stage_mgmt==18.0.*",
    "odoo-addon-project_task_stage_state==18.0.*",
    "odoo-addon-project_task_stock==18.0.*",
    "odoo-addon-project_task_stock_product_set==18.0.*",
    "odoo-addon-project_task_tag==18.0.*",
    "odoo-addon-project_template==18.0.*",
    "odoo-addon-project_timeline==18.0.*",
    "odoo-addon-project_timeline_hr_timesheet==18.0.*",
    "odoo-addon-project_timesheet_time_control==18.0.*",
    "odoo-addon-project_type==18.0.*",
    "odoo-addon-project_version==18.0.*",
    "odoo-addon-sale_project_copy_tasks==18.0.*",
    "odoo-addon-sale_project_task_recurrency==18.0.*",
    "odoo-addon-sale_project_task_selection==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
